--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -26,7 +26,8 @@ img {
   --title-2: 2.5rem;
   --title-3: 2rem;
   --title-4: 1.375rem;
-  --title-5: 1.125rem;
+  --title-5: 1.2rem;
+  --title-6: 1.125rem;
 
   --text-1:  1.125rem;
   --text-2:  1rem;
@@ -35,6 +36,7 @@ img {
 
 body {
   font-family: "Poppins", sans-serif;
+  color: white;
 }
 
 .container {
