--- a/styles/header.css
+++ b/styles/header.css
@@ -1,11 +1,10 @@
 .container {
     background-color: var(--color-grey-5);
+
 }
 
 .img__opacity {
     background-color: rgba(0, 0, 0, 0.698);
-    /* position: absolute;
-    left: 0; */
     width: 100%;
     height: 100%;
 }
@@ -19,7 +18,7 @@
 
     background-image: url('../assets/img/womens.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: initial;
 }
 
 .header__container {
@@ -30,11 +29,11 @@
     height: 80%;
     width: 90%;
 
-    margin-top: 40px;
-
     background-color: transparent;
 
-    padding: 0;
+    padding-top: 40px;
+
+    margin: 0 auto;
 }
 
 .header__title {
@@ -51,6 +50,8 @@
     letter-spacing: .5px;
 
     line-height: 150%;
+
+    align-self: flex-start;
 }
 
 .header__description-container {
@@ -100,98 +101,35 @@
     margin-top: 22px;
 }
 
-.cards__list{
-    display: flex;
-    flex-direction: column;
+@media (min-width: 769px) {
 
-    gap: 2rem;
-}
+    .header__container {
 
-.cards__container {
-    color: white;
-    background-color: var(--color-grey-5);
-}
+        height: 40%;
+        width: 70%;
 
+        align-self: flex-start;
 
-.cards__title {
-    color: var(--color-grey-1);
-    font-weight: bold;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    font-size: var(--title-6);
-}
+        margin-left: 50px;
+    }
 
-.card {
-    display: flex;
-    flex-direction: column;
+    .header__container-img{
+        height: 450px;
 
-    gap: 1.2rem;
+        background-position: bottom;
+    }
 
-    background-color: var(--color-grey-6);
-    padding: 2rem;
-}
+    .header__title {
+        width: 120px;
+    }
 
-.card__title {
-    color: var(--color-grey-1);
-    font-weight: bold;
-    font-size: var(--title-6);
+    .header__subtitle {
+       font-size: var(--title-3);
 
-    line-height: 150%;
-}
+    }
 
-.card__company,
-.card__city {
-    color: var(--color-grey-2);
-    font-size: 11px;
-}
+    .header__description-container{
+        gap: .4rem;
+    }
 
-.card__description {
-    color: var(--color-grey-2);
-    font-size: 12px;
-
-    line-height: 200%;
-
-}
-
-.info__container {
-    display: flex;
-    flex-direction: row;
-    gap: 1.5rem;
-}
-
-.card__modality {
-    background-color: var(--color-grey-3);
-
-    color: var(--color-grey-2);
-    font-size: 10px;
-
-    padding: 8px;
-
-    width: 90px;
-
-    text-align: center;
-
-}
-
-.card__button{
-    background-color: var(--color-brand-1);
-
-
-    width: 220px;
-    height: 25px;
-
-    padding: 16px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    font-size: 12px;
-    color: var(--color-grey-6);
-    letter-spacing: .5px;
-
-    border: none;
-    border-radius: var(--radius-default);
-
-    font-family: "Poppins", sans-serif;
 }
